--- a/docs/docs-ref-autogen/excel_1_8/excel/excel.charttrendlinelabel.yml
+++ b/docs/docs-ref-autogen/excel_1_8/excel/excel.charttrendlinelabel.yml
@@ -11,7 +11,7 @@ items:
       - typeScript
     type: class
     extends:
-      - 'excel!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: excel!
     children:
       - 'excel!Excel.ChartTrendlineLabel#autoText:member'
@@ -35,7 +35,7 @@ items:
       - 'excel!Excel.ChartTrendlineLabel#width:member'
   - uid: 'excel!Excel.ChartTrendlineLabel#autoText:member'
     summary: |-
-      该布尔值表示趋势线标签是否根据上下文自动生成相应的文本。
+      指定趋势线标签是否根据上下文自动生成相应的文本。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: autoText
@@ -62,7 +62,7 @@ items:
           - 'excel!Excel.RequestContext:class'
   - uid: 'excel!Excel.ChartTrendlineLabel#format:member'
     summary: |-
-      表示图表趋势线标签的格式。
+      图表趋势线标签的格式。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: format
@@ -92,7 +92,7 @@ items:
           - string
   - uid: 'excel!Excel.ChartTrendlineLabel#height:member'
     summary: |-
-      返回图表趋势线标签的高度，以磅为单位。 只读。 如果图表趋势线标签不可见，则为 Null。
+      返回图表趋势线标签的高度，以磅为单位。 如果图表趋势线标签不可见，则为 Null。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: height
@@ -237,7 +237,7 @@ items:
         - id: options
           description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
           type:
-            - 'excel!OfficeExtension.UpdateOptions:interface'
+            - 'office!OfficeExtension.UpdateOptions:interface'
   - uid: 'excel!Excel.ChartTrendlineLabel#set:member(2)'
     summary: 基于现有加载的对象同时设置该对象的多个属性。
     name: set(properties)
@@ -331,7 +331,7 @@ items:
           - 'excel!Excel.ChartTrendlineLabel#verticalAlignment~0:complex'
   - uid: 'excel!Excel.ChartTrendlineLabel#width:member'
     summary: |-
-      返回图表趋势线标签的宽度，以磅为单位。 只读。 如果图表趋势线标签不可见，则为 Null。
+      返回图表趋势线标签的宽度，以磅为单位。 如果图表趋势线标签不可见，则为 Null。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: width
@@ -345,7 +345,7 @@ items:
         type:
           - number
 references:
-  - uid: 'excel!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'excel!Excel.RequestContext:class'
     name: RequestContext
@@ -366,7 +366,7 @@ references:
     name: Excel.Interfaces.ChartTrendlineLabelLoadOptions
   - uid: 'excel!Excel.Interfaces.ChartTrendlineLabelUpdateData:interface'
     name: Interfaces.ChartTrendlineLabelUpdateData
-  - uid: 'excel!OfficeExtension.UpdateOptions:interface'
+  - uid: 'office!OfficeExtension.UpdateOptions:interface'
     name: OfficeExtension.UpdateOptions
   - uid: 'excel!Excel.Interfaces.ChartTrendlineLabelData:interface'
     name: Excel.Interfaces.ChartTrendlineLabelData
