--- a/docs/docs-ref-autogen/excel_online/excel/excel.workbook.yml
+++ b/docs/docs-ref-autogen/excel_online/excel/excel.workbook.yml
@@ -11,7 +11,7 @@ items:
       - typeScript
     type: class
     extends:
-      - 'excel!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: excel!
     children:
       - 'excel!Excel.Workbook#application:member'
@@ -19,6 +19,8 @@ items:
       - 'excel!Excel.Workbook#bindings:member'
       - 'excel!Excel.Workbook#calculationEngineVersion:member'
       - 'excel!Excel.Workbook#chartDataPointTrack:member'
+      - 'excel!Excel.Workbook#close:member(1)'
+      - 'excel!Excel.Workbook#close:member(2)'
       - 'excel!Excel.Workbook#comments:member'
       - 'excel!Excel.Workbook#context:member'
       - 'excel!Excel.Workbook#customXmlParts:member'
@@ -46,6 +48,8 @@ items:
       - 'excel!Excel.Workbook#properties:member'
       - 'excel!Excel.Workbook#protection:member'
       - 'excel!Excel.Workbook#readOnly:member'
+      - 'excel!Excel.Workbook#save:member(1)'
+      - 'excel!Excel.Workbook#save:member(2)'
       - 'excel!Excel.Workbook#set:member(1)'
       - 'excel!Excel.Workbook#set:member(2)'
       - 'excel!Excel.Workbook#settings:member'
@@ -60,7 +64,7 @@ items:
       - 'excel!Excel.Workbook#worksheets:member'
   - uid: 'excel!Excel.Workbook#application:member'
     summary: |-
-      表示包含此工作簿的 Excel 应用程序实例。 只读。
+      表示包含此工作簿的 Excel 应用程序实例。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: application
@@ -75,7 +79,7 @@ items:
           - 'excel!Excel.Application:class'
   - uid: 'excel!Excel.Workbook#autoSave:member'
     summary: |-
-      指定工作簿是否处于自动保存模式。 只读。
+      指定工作簿是否处于自动保存模式。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: autoSave
@@ -90,7 +94,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Workbook#bindings:member'
     summary: |-
-      表示属于工作簿的绑定的集合。 只读。
+      表示属于工作簿的绑定的集合。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: bindings
@@ -105,7 +109,7 @@ items:
           - 'excel!Excel.BindingCollection:class'
   - uid: 'excel!Excel.Workbook#calculationEngineVersion:member'
     summary: |-
-      返回有关 Excel 计算引擎的版本号。 只读。
+      返回有关 Excel 计算引擎的版本号。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: calculationEngineVersion
@@ -133,9 +137,61 @@ items:
       return:
         type:
           - boolean
+  - uid: 'excel!Excel.Workbook#close:member(1)'
+    summary: |-
+      关闭当前工作簿。
+
+      \[[API 集： ExcelApi 1.11](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: close(closeBehavior)
+    fullName: close(closeBehavior)
+    langs:
+      - typeScript
+    type: method
+    syntax:
+      content: 'close(closeBehavior?: Excel.CloseBehavior): void;'
+      return:
+        type:
+          - void
+        description: |-
+
+
+          #### <a name="examples"></a>示例
+
+          ```typescript
+          // Link to full sample: https://raw.githubusercontent.com/OfficeDev/office-js-snippets/master/samples/excel/50-workbook/workbook-save-and-close.yaml
+          await Excel.run(async (context) => {
+              context.workbook.close(Excel.CloseBehavior.save);
+          });
+          ```
+      parameters:
+        - id: closeBehavior
+          description: 工作簿关闭行为。
+          type:
+            - 'excel!Excel.CloseBehavior:enum'
+  - uid: 'excel!Excel.Workbook#close:member(2)'
+    summary: |-
+      关闭当前工作簿。
+
+      \[[API 集： ExcelApi 1.11](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: close(closeBehaviorString)
+    fullName: close(closeBehaviorString)
+    langs:
+      - typeScript
+    type: method
+    syntax:
+      content: 'close(closeBehaviorString?: "Save" | "SkipSave"): void;'
+      return:
+        type:
+          - void
+        description: ''
+      parameters:
+        - id: closeBehaviorString
+          description: 工作簿关闭行为。
+          type:
+            - '"Save" | "SkipSave"'
   - uid: 'excel!Excel.Workbook#comments:member'
     summary: |-
-      表示与工作簿关联的批注集合。 只读。
+      表示与工作簿关联的批注集合。
 
       \[[API 集： ExcelApi 1.10](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: comments
@@ -162,7 +218,7 @@ items:
           - 'excel!Excel.RequestContext:class'
   - uid: 'excel!Excel.Workbook#customXmlParts:member'
     summary: |-
-      表示此工作簿包含的自定义 XML 部件的集合。 只读。
+      表示此工作簿包含的自定义 XML 部件的集合。
 
       \[[API 集： ExcelApi 1.5](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: customXmlParts
@@ -177,7 +233,7 @@ items:
           - 'excel!Excel.CustomXmlPartCollection:class'
   - uid: 'excel!Excel.Workbook#dataConnections:member'
     summary: |-
-      表示工作簿中的所有数据连接。 只读。
+      表示工作簿中的所有数据连接。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: dataConnections
@@ -192,7 +248,7 @@ items:
           - 'excel!Excel.DataConnectionCollection:class'
   - uid: 'excel!Excel.Workbook#functions:member'
     summary: |-
-      代表可用于计算的工作表函数的集合。 只读。
+      代表可用于计算的工作表函数的集合。
 
       \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: functions
@@ -384,7 +440,7 @@ items:
           ```
   - uid: 'excel!Excel.Workbook#isDirty:member'
     summary: |-
-      指定自上次保存以来是否对指定的工作簿进行任何更改。 如果要关闭修改过的工作簿而不保存或提示保存它，则可以将该属性设置为 true。
+      指定自上次保存工作簿后是否进行了更改。 如果要关闭修改过的工作簿而不保存或提示保存它，则可以将该属性设置为 true。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: isDirty
@@ -461,7 +517,7 @@ items:
                       }
   - uid: 'excel!Excel.Workbook#name:member'
     summary: |-
-      获取工作簿名称。 只读。
+      获取工作簿名称。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: name
@@ -476,7 +532,7 @@ items:
           - string
   - uid: 'excel!Excel.Workbook#names:member'
     summary: |-
-      表示工作簿范围内的已命名项目（称为区域和常量）的集合。 只读。
+      表示工作簿范围内的已命名项目（称为区域和常量）的集合。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: names
@@ -521,7 +577,7 @@ items:
           - 'excel!Excel.Workbook#onSelectionChanged~0:complex'
   - uid: 'excel!Excel.Workbook#pivotTables:member'
     summary: |-
-      表示一组与 workbook 相关联的 PivotTable 对象。 只读。
+      表示一组与 workbook 相关联的 PivotTable 对象。
 
       \[[API 集： ExcelApi 1.3](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: pivotTables
@@ -536,7 +592,7 @@ items:
           - 'excel!Excel.PivotTableCollection:class'
   - uid: 'excel!Excel.Workbook#pivotTableStyles:member'
     summary: |-
-      表示一组与工作簿相关联的 PivotTableStyles。 只读。
+      表示一组与工作簿相关联的 PivotTableStyles。
 
       \[[API 集： ExcelApi 1.10](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: pivotTableStyles
@@ -551,7 +607,7 @@ items:
           - 'excel!Excel.PivotTableStyleCollection:class'
   - uid: 'excel!Excel.Workbook#previouslySaved:member'
     summary: |-
-      指定工作簿是否已在本地或在线保存。 只读。
+      指定是否曾在本地或联机保存工作簿。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: previouslySaved
@@ -566,7 +622,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Workbook#properties:member'
     summary: |-
-      获取工作簿属性。 只读。
+      获取工作簿属性。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: properties
@@ -613,7 +669,7 @@ items:
           ```
   - uid: 'excel!Excel.Workbook#protection:member'
     summary: |-
-      返回工作簿的工作簿保护对象。 只读。
+      返回工作簿的保护对象。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: protection
@@ -628,7 +684,7 @@ items:
           - 'excel!Excel.WorkbookProtection:class'
   - uid: 'excel!Excel.Workbook#readOnly:member'
     summary: |-
-      如果在只读模式下打开工作簿，则为 True。 只读。
+      如果在只读模式下打开工作簿，则为 True。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: readOnly
@@ -641,6 +697,58 @@ items:
       return:
         type:
           - boolean
+  - uid: 'excel!Excel.Workbook#save:member(1)'
+    summary: |-
+      保存当前工作簿。
+
+      \[[API 集： ExcelApi 1.11](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: save(saveBehavior)
+    fullName: save(saveBehavior)
+    langs:
+      - typeScript
+    type: method
+    syntax:
+      content: 'save(saveBehavior?: Excel.SaveBehavior): void;'
+      return:
+        type:
+          - void
+        description: |-
+
+
+          #### <a name="examples"></a>示例
+
+          ```typescript
+          // Link to full sample: https://raw.githubusercontent.com/OfficeDev/office-js-snippets/master/samples/excel/50-workbook/workbook-save-and-close.yaml
+          await Excel.run(async (context) => {
+              context.workbook.save(Excel.SaveBehavior.save);
+          });
+          ```
+      parameters:
+        - id: saveBehavior
+          description: 保存工作簿的行为。
+          type:
+            - 'excel!Excel.SaveBehavior:enum'
+  - uid: 'excel!Excel.Workbook#save:member(2)'
+    summary: |-
+      保存当前工作簿。
+
+      \[[API 集： ExcelApi 1.11](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    name: save(saveBehaviorString)
+    fullName: save(saveBehaviorString)
+    langs:
+      - typeScript
+    type: method
+    syntax:
+      content: 'save(saveBehaviorString?: "Save" | "Prompt"): void;'
+      return:
+        type:
+          - void
+        description: ''
+      parameters:
+        - id: saveBehaviorString
+          description: 保存工作簿的行为。
+          type:
+            - '"Save" | "Prompt"'
   - uid: 'excel!Excel.Workbook#set:member(1)'
     summary: 同时设置一个对象的多个属性。 您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。
     remarks: |-
@@ -666,7 +774,7 @@ items:
         - id: options
           description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
           type:
-            - 'excel!OfficeExtension.UpdateOptions:interface'
+            - 'office!OfficeExtension.UpdateOptions:interface'
   - uid: 'excel!Excel.Workbook#set:member(2)'
     summary: 基于现有加载的对象同时设置该对象的多个属性。
     name: set(properties)
@@ -687,7 +795,7 @@ items:
             - 'excel!Excel.Workbook:class'
   - uid: 'excel!Excel.Workbook#settings:member'
     summary: |-
-      表示一组与 workbook 相关联的 setting 对象。 只读。
+      表示一组与 workbook 相关联的 setting 对象。
 
       \[[API 集： ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: settings
@@ -702,7 +810,7 @@ items:
           - 'excel!Excel.SettingCollection:class'
   - uid: 'excel!Excel.Workbook#slicers:member'
     summary: |-
-      表示与工作簿关联的切片器集合。 只读。
+      表示与工作簿关联的切片器集合。
 
       \[[API 集： ExcelApi 1.10](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: slicers
@@ -717,7 +825,7 @@ items:
           - 'excel!Excel.SlicerCollection:class'
   - uid: 'excel!Excel.Workbook#slicerStyles:member'
     summary: |-
-      表示一组与工作簿相关联的 SlicerStyles。 只读。
+      表示一组与工作簿相关联的 SlicerStyles。
 
       \[[API 集： ExcelApi 1.10](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: slicerStyles
@@ -732,7 +840,7 @@ items:
           - 'excel!Excel.SlicerStyleCollection:class'
   - uid: 'excel!Excel.Workbook#styles:member'
     summary: |-
-      表示与工作簿关联的样式的集合。 只读。
+      表示与工作簿关联的样式的集合。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: styles
@@ -775,7 +883,7 @@ items:
           ```
   - uid: 'excel!Excel.Workbook#tables:member'
     summary: |-
-      表示与工作簿关联的表的集合。 只读。
+      表示与工作簿关联的表的集合。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: tables
@@ -790,7 +898,7 @@ items:
           - 'excel!Excel.TableCollection:class'
   - uid: 'excel!Excel.Workbook#tableStyles:member'
     summary: |-
-      表示一组与工作簿相关联的 TableStyles。 只读。
+      表示一组与工作簿相关联的 TableStyles。
 
       \[[API 集： ExcelApi 1.10](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: tableStyles
@@ -805,7 +913,7 @@ items:
           - 'excel!Excel.TableStyleCollection:class'
   - uid: 'excel!Excel.Workbook#timelineStyles:member'
     summary: |-
-      表示一组与工作簿相关联的 TimelineStyles。 只读。
+      表示一组与工作簿相关联的 TimelineStyles。
 
       \[[API 集： ExcelApi 1.10](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: timelineStyles
@@ -848,7 +956,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Workbook#worksheets:member'
     summary: |-
-      表示与工作簿关联的工作表的集合。 只读。
+      表示与工作簿关联的工作表的集合。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: worksheets
@@ -862,12 +970,14 @@ items:
         type:
           - 'excel!Excel.WorksheetCollection:class'
 references:
-  - uid: 'excel!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'excel!Excel.Application:class'
     name: Excel.Application
   - uid: 'excel!Excel.BindingCollection:class'
     name: Excel.BindingCollection
+  - uid: 'excel!Excel.CloseBehavior:enum'
+    name: Excel.CloseBehavior
   - uid: 'excel!Excel.CommentCollection:class'
     name: Excel.CommentCollection
   - uid: 'excel!Excel.RequestContext:class'
@@ -888,7 +998,7 @@ references:
     name: OfficeExtension.ClientResult<boolean>
     fullName: OfficeExtension.ClientResult<boolean>
     spec.typeScript:
-      - uid: 'excel!OfficeExtension.ClientResult:class'
+      - uid: 'office!OfficeExtension.ClientResult:class'
         name: OfficeExtension.ClientResult
         fullName: OfficeExtension.ClientResult
       - name: <boolean>
@@ -905,7 +1015,7 @@ references:
     name: OfficeExtension.EventHandlers<Excel.WorkbookAutoSaveSettingChangedEventArgs>
     fullName: OfficeExtension.EventHandlers<Excel.WorkbookAutoSaveSettingChangedEventArgs>
     spec.typeScript:
-      - uid: 'excel!OfficeExtension.EventHandlers:class'
+      - uid: 'office!OfficeExtension.EventHandlers:class'
         name: OfficeExtension.EventHandlers
         fullName: OfficeExtension.EventHandlers
       - name: <
@@ -919,7 +1029,7 @@ references:
     name: OfficeExtension.EventHandlers<Excel.SelectionChangedEventArgs>
     fullName: OfficeExtension.EventHandlers<Excel.SelectionChangedEventArgs>
     spec.typeScript:
-      - uid: 'excel!OfficeExtension.EventHandlers:class'
+      - uid: 'office!OfficeExtension.EventHandlers:class'
         name: OfficeExtension.EventHandlers
         fullName: OfficeExtension.EventHandlers
       - name: <
@@ -937,9 +1047,11 @@ references:
     name: Excel.DocumentProperties
   - uid: 'excel!Excel.WorkbookProtection:class'
     name: Excel.WorkbookProtection
+  - uid: 'excel!Excel.SaveBehavior:enum'
+    name: Excel.SaveBehavior
   - uid: 'excel!Excel.Interfaces.WorkbookUpdateData:interface'
     name: Interfaces.WorkbookUpdateData
-  - uid: 'excel!OfficeExtension.UpdateOptions:interface'
+  - uid: 'office!OfficeExtension.UpdateOptions:interface'
     name: OfficeExtension.UpdateOptions
   - uid: 'excel!Excel.SettingCollection:class'
     name: Excel.SettingCollection
